--- a/app/src/main/res/layout/activity_test_touch_event.xml
+++ b/app/src/main/res/layout/activity_test_touch_event.xml
@@ -14,4 +14,12 @@
         android:layout_centerInParent="true"
         android:background="@android:color/white"/>
 
+    <com.example.lemon.eventtest.TouchEventTestView2
+        android:id="@+id/test_view2"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/test_view"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/white"/>
 </com.example.lemon.eventtest.TouchEventTestViewGroup>
