--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.lemon.shortmessage.ShortMessageList">
+        tools:context="com.example.lemon.shortmessage.ShortMessageListActivity">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
